# EmMi

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  pytest_output.txt  pytest_utf8.txt
configs/: ds_config_zero3.json  emmit_13b_moe.yaml  emmit_multimodal_test.yaml  emmit_supertiny.yaml  emmit_tiny.yaml  nova_sunya_1.2t.yaml  nova_sunya_finetune.yaml
data/: multilingual_sample.txt  tokenizer_minimal.txt  tokenizer_train.txt
data/sample_tiny/: sample_train.pt
emmit/: __init__.py
emmit/api/: __init__.py
emmit/data/: __init__.py  dataset.py  mixing.py  preprocessor.py
emmit/model/: __init__.py  attention.py  config.py  generation.py  moe.py  norms.py  transformer.py  vision.py
emmit/tokenizer/: __init__.py  config.py  normalization.py  sampling.py
emmit/training/: __init__.py  checkpointing.py  distributed.py  live_monitor.py  quantization.py  trainer.py
emmit/vision/: __init__.py  encoder.py  multimodal.py
scripts/: 01_collect_data.py  02_train_tokenizer.py  03_preprocess_data.py  04_train_model.py  app.py  convert_hf_to_emmit.py  debug_nans.py  download_1t_model.py  download_coco_subset.py  download_data.py  eval_harness.py  expert_dashboard.py  generate.py  inference_server.py  preprocess_data.py  quantize_model.py  test_multimodal.py  train.py  train_nova_sunya.sh  train_tokenizer.py  verify_nova_sunya.py
tests/: test_attention.py  test_model.py  test_moe.py
