[project]
name = "emmit"
version = "0.1.0"
description = "Emmit AI - Mixture of Experts Multilingual Vision-Language Model"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "sentencepiece>=0.1.99",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
training = [
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
]
flash = [
    "flash-attn>=2.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["emmit*"]
